opam-version: "2.0"
maintainer: "jonathan.ludlam@citrix.com"
authors: [ "Jonathan Ludlam" "David Scott" "Thomas Sanders" ]
license: "LGPL-2 with OCaml linking exception"
homepage: "https://github.com/xapi-project/nbd"
doc: "https://xapi-project.github.io/nbd/nbd-lwt-unix/index.html"
dev-repo: "git+https://github.com/xapi-project/nbd.git"
bug-reports: "https://github.com/xapi-project/nbd/issues"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "cstruct-lwt"
  "io-page"
  "io-page-unix"
  "lwt" {>= "2.7.0"}
  "mirage-types-lwt" {>= "3.0.0"}
  "mirage-block-lwt"
  "mirage-block-unix"
  "nbd"
  "lwt_ssl"
  "ssl"
]
tags: [ "org:mirage" "org:xapi-project" ]
