opam-version: "2.0"
maintainer: "jonathan.ludlam@citrix.com"
authors: [ "Jonathan Ludlam" "David Scott" "Thomas Sanders" ]
license: "LGPL-2 with OCaml linking exception"
homepage: "https://github.com/xapi-project/nbd"
dev-repo: "git+https://github.com/xapi-project/nbd.git"
bug-reports: "https://github.com/xapi-project/nbd/issues"
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
  "cmdliner"
  "lwt" {>= "2.7.0"}
  "lwt_log"
  "mirage-block-unix"
  "nbd-lwt-unix"
  "uri"
]
depexts: [
  ["qemu-img" "nbd" "nmap-ncat"] {with-test & os-family = "rhel"}
  ["qemu-utils" "nbd-client" "netcat-openbsd"] {with-test & os-family = "debian"}
]
tags: [ "org:mirage" "org:xapi-project" ]
